--- a/Clase 01/Alumno/Desafío/index.html
+++ b/Clase 01/Alumno/Desafío/index.html
@@ -5,9 +5,31 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="tab icon" href="./favicon.png">
+  <link rel="stylesheet" href="css/estilos.css">
   <title>Clase 01 - Desafío</title>
 </head>
 <body>
+
+  <h1>Workshop 1</h1>
+  <section>
+      <h2>Lista de Alumnos</h2>
+
+  </section>
+
+  <section>
+      <h2>Ingreso de Datos</h2>
+      <form action="#">
+        <input type="text" placeholder="Nombre">
+        <input type="number" placeholder="DNI">
+        <input type="text" placeholder="Apellido">
+        <input type="email" placeholder="E-mail">
+        <input type='submit'> 
+        <input type="text" placeholder="Nombre">
+        <input type="email" placeholder="DNI">
+
+      </form>
+
+  </section>
 
 
 </body>
