--- a/Clase 03/Profe/En clase/index.html
+++ b/Clase 03/Profe/En clase/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,11 +8,16 @@
   <link rel="tab icon" href="./favicon.png">
   <title>Clase 03 - En clase</title>
 </head>
+
 <body>
   <h1>Clase 05</h1>
 
 
-  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptas nobis repudiandae beatae dignissimos aliquid sapiente, dicta molestias veritatis assumenda voluptatem molestiae corrupti ratione rem cupiditate velit labore aliquam accusamus modi.</p>
   <script src="./js/index.js"></script>
+  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptas nobis repudiandae beatae dignissimos aliquid sapiente,
+    dicta molestias veritatis assumenda voluptatem molestiae corrupti ratione rem cupiditate velit labore aliquam accusamus
+    modi.</p>
+
 </body>
+
 </html>
