--- a/Clase 13/Alumno/Mini ejercicio/index.html
+++ b/Clase 13/Alumno/Mini ejercicio/index.html
@@ -13,14 +13,16 @@
     crossorigin="anonymous">
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
     crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
+    crossorigin="anonymous">
   <link rel="tab icon" href="./favicon.png">
   <title>Clase 13 - Desafío</title>
   <style>
-  i{
-    cursor: pointer;
-  margin: 0 0 0 50px;
-  }</style>
+    i {
+      cursor: pointer;
+      margin: 0 0 0 50px;
+    }
+  </style>
 </head>
 
 <body>
@@ -32,6 +34,11 @@
       <li class="list-group-item">Pollo al horno con papas<i class="fas fa-trash-alt"></i></li>
       <li class="list-group-item">Brownie con helado<i class="fas fa-trash-alt"></i></li>
     </ul>
+
+
+
+
+
   </div>
   <script src="./js/index.js"></script>
 </body>
